# Course_3

./: README.md  conftest.py  func_json.py  function.py  main.py  pyproject.toml
func_json/: open_json.py
tests/: test_function.py
